testdata/baselines/reference/compiler/automaticTypeDirectiveResolutionBundler.errors.txt
/node_modules/pkg/cjs.d.ts(6,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'expectedCondition' must be of type '"import"', but here has type '"default"'.


==== /index.ts (0 errors) ====
    // The automatic type directive "pkg" from @types should resolve to esm.d.mts
    // because bundler resolution uses the "import" condition.
    // If the wrong file is resolved, we'll get a type error due to conflicting declarations.
    import type { PkgType } from "pkg";
    
    // This should work if esm.d.mts is correctly resolved
    const x: PkgType = { esm: true };
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "1.0.0",
        "exports": {
            ".": {
                "import": {
                    "types": "./esm.d.mts"
                },
                "default": {
                    "types": "./cjs.d.ts"
                }
            }
        }
    }
    
==== /node_modules/pkg/esm.d.mts (0 errors) ====
    // This file should be resolved when using bundler resolution with "import" condition
    export interface PkgType {
        esm: true;
    }
    declare global {
        var expectedCondition: "import";
    }
    
==== /node_modules/pkg/cjs.d.ts (1 errors) ====
    // This file should NOT be resolved - it's the "default" condition fallback
    export interface PkgType {
        cjs: true;  // Different shape - will cause error if wrong file is used
    }
    declare global {
        var expectedCondition: "default";  // Conflicts with esm.d.mts if both are loaded
            ~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'expectedCondition' must be of type '"import"', but here has type '"default"'.
!!! related TS6203 /node_modules/pkg/esm.d.mts:6:9: 'expectedCondition' was also declared here.
    }
    